--- a/TrashCollectorProject/Views/Customers/CustomerProfile.cshtml
+++ b/TrashCollectorProject/Views/Customers/CustomerProfile.cshtml
@@ -1,11 +1,11 @@
 ﻿@model TrashCollectorProject.Models.Customer
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "CustomerProfile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>CustomerProfile</h1>
 
 <div>
     <h4>Customer</h4>
@@ -59,7 +59,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Zipcode)
         </dd>
-        @*<dt class = "col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.isConfirmed)
         </dt>
         <dd class = "col-sm-10">
@@ -70,7 +70,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdentityUser.Id)
-        </dd>*@
+        </dd>
     </dl>
 </div>
 <div>
