Testing after nuking database. Database for some reason, would not allow dev to add other properties into the customer model. Looks like it updated fine now.

--- a/TrashCollectorProject/Views/Customers/Index.cshtml
+++ b/TrashCollectorProject/Views/Customers/Index.cshtml
@@ -37,6 +37,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Zipcode)
             </th>
+            @*<th>
+                @Html.DisplayNameFor(model => model.isConfirmed)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IdentityUser)
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -67,6 +73,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Zipcode)
             </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.isConfirmed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IdentityUser.Id)
+            </td>*@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
