--- a/TrashCollectorProject/Views/Customers/Create.cshtml
+++ b/TrashCollectorProject/Views/Customers/Create.cshtml
@@ -57,7 +57,11 @@
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="isConfirmed" /> @Html.DisplayNameFor(model => model.isConfirmed)
                 </label>
-            </div>           
+            </div>
+            <div class="form-group">
+                <label asp-for="IdentityUserId" class="control-label"></label>
+                <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
