--- a/TrashCollectorProject/Views/Customers/Create.cshtml
+++ b/TrashCollectorProject/Views/Customers/Create.cshtml
@@ -18,30 +18,34 @@
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="OneTimePickup" class="control-label"></label>
                 <input asp-for="OneTimePickup" class="form-control" />
                 <span asp-validation-for="OneTimePickup" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Balance" class="control-label"></label>
-                <input asp-for="Balance" class="form-control" />
-                <span asp-validation-for="Balance" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
                 <input asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="WeeklyPickup" class="control-label"></label>
+                <input asp-for="WeeklyPickup" class="form-control" />
+                <span asp-validation-for="WeeklyPickup" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
@@ -52,15 +56,6 @@
                 <label asp-for="Zipcode" class="control-label"></label>
                 <input asp-for="Zipcode" class="form-control" />
                 <span asp-validation-for="Zipcode" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="isConfirmed" /> @Html.DisplayNameFor(model => model.isConfirmed)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdentityUserId" class="control-label"></label>
-                <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
