Customer views updated Found additional non-relevant information on views, create, and details page. Took out.

--- a/TrashCollectorProject/Views/Customers/Index.cshtml
+++ b/TrashCollectorProject/Views/Customers/Index.cshtml
@@ -32,17 +32,14 @@
                 @Html.DisplayNameFor(model => model.EndDate)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.WeeklyPickup)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Address)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Zipcode)
             </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.isConfirmed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdentityUser)
-            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -68,17 +65,16 @@
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
             <td>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Zipcode)
             </td>
-            @*<td>
-                @Html.DisplayFor(modelItem => item.isConfirmed)
-            </td>
+            
             <td>
-                @Html.DisplayFor(modelItem => item.IdentityUser.Id)
-            </td>*@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
