--- a/TrashCollectorProject/Views/Customers/Edit.cshtml
+++ b/TrashCollectorProject/Views/Customers/Edit.cshtml
@@ -40,9 +40,9 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OneTimePickup" class="control-label"></label>
-                <input asp-for="OneTimePickup" class="form-control" />
-                <span asp-validation-for="OneTimePickup" class="text-danger"></span>
+                <label asp-for="WeeklyPickup" class="control-label"></label>
+                <input asp-for="WeeklyPickup" class="form-control" />
+                <span asp-validation-for="WeeklyPickup" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
