Employee Views modified DEV finalized Employee weekly views to show a $ before the balance and to boldthe service end date so employees can see if a service has been suspended.

--- a/TrashCollectorProject/Views/Employees/FridayPickup.cshtml
+++ b/TrashCollectorProject/Views/Employees/FridayPickup.cshtml
@@ -90,13 +90,13 @@
                     @Html.DisplayFor(modelItem => item.OneTimePickup)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Balance)
+                    $@Html.DisplayFor(modelItem => item.Balance)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.StartDate)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.EndDate)
+                    <b>@Html.DisplayFor(modelItem => item.EndDate)</b>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.WeeklyPickup)
