--- a/TrashCollectorProject/Views/Customers/Details.cshtml
+++ b/TrashCollectorProject/Views/Customers/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Balance)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Balance)
+           $@Html.DisplayFor(model => model.Balance)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartDate)
