--- a/TrashCollectorProject/Views/Employees/ThursdayPickup.cshtml
+++ b/TrashCollectorProject/Views/Employees/ThursdayPickup.cshtml
@@ -90,13 +90,13 @@
                     @Html.DisplayFor(modelItem => item.OneTimePickup)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Balance)
+                    $@Html.DisplayFor(modelItem => item.Balance)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.StartDate)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.EndDate)
+                    <b>@Html.DisplayFor(modelItem => item.EndDate)</b>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.WeeklyPickup)
