--- a/TrashCollectorProject/Views/Home/Index.cshtml
+++ b/TrashCollectorProject/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>To the wonderful world of trash collecting! Don't WASTE your time, just click and select your weekly pickup time and we'll take it from there.</a>.</p>
 </div>
